--- a/calculate.html
+++ b/calculate.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Экопрогноз</title>
+    <link rel="stylesheet" href="" id="theme"/>
+    <script src="js/theme.js"></script>
     <link rel="stylesheet" href="css/common_styles.css" />
     <link rel="stylesheet" href="css/home_styles.css" />
     <link rel="stylesheet" href="css/calc_styles.css" />
@@ -457,206 +459,6 @@
     <script src="js/trends.js" defer></script>
     <script src="js/chart_engine.js" defer></script>
     <script src="js/calculate.js" defer></script>
-
-    <!--
-    <div class="common">
-        <div class="checkbox_td">
-            <input type="checkbox" id="chart_checkbox" class="chart_checkbox">
-            <label for="chart_checkbox"></label>
-        </div>
-        <div class="chart_div">
-            <div class="plotly_div"><iframe name="content_frame"></iframe></div>
-            <form name="param_form" class="param_form">
-                <span class="add_chart_button">+</span>
-            </form>
-            <span class="span_chart_info"></span>
-            <div class="chart_restangles"></div>
-            <div class="chart_settings">
-                <div class="chart_data"></div>
-                <div class="chart_stuff"></div>
-            </div>
-        </div>
-        <div class="trends_2d">
-            <span class="trends_2d_header">Аппроксимация</span>
-            <form name="trend_2d_form" class="trend_2d_form">
-                <select class="select_2d_trend_type" name="select_2d_trend_type">
-                    <option value="none">Отсутствует</option>
-                    <option value="0">Линейная</option>
-                    <option value="1">Гиперболическая</option>
-                    <option value="2">Параболическая</option>
-                    <option value="3">Экспоненциальная</option>
-                    <option value="4">Степенная</option>
-                </select>
-                <label for="number_2d_trend_level">порядок:</label>
-                <input type="number" class="number_2d_trend_level" name="number_2d_trend_level"
-                    id="number_2d_trend_level" min="2" max="6" step="1" value="2" disabled>
-                <label for="number_2d_trend_back">назад на:</label>
-                <input type="number" class="number_2d_trend_back" name="number_2d_trend_back" id="number_2d_trend_back"
-                    min="0" max="99" step="1" value="0" disabled>
-                <label for="number_2d_trend_forward">вперед на:</label>
-                <input type="number" class="number_2d_trend_forward" name="number_2d_trend_forward"
-                    id="number_2d_trend_forward" min="0" max="99" step="1" value="0" disabled>
-                <label for="number_2d_trend_step">с шагом:</label>
-                <input type="number" class="number_2d_trend_step" name="number_2d_trend_step" id="number_2d_trend_step"
-                    min="0.1" max="100" step="0.1" value="1" disabled>
-            </form>
-            <span class="r trend_results"></span>
-            <span class="a trend_results"></span>
-            <span class="trend_function trend_results"></span>
-            <input type="checkbox" id="a_error_checkbox" class="a_error_checkbox">
-            <label for="a_error_checkbox" class="a_error_checkbox_label">Показать ошибку</label>
-            <div class="trends_2d_optimisation trends_part">
-                <hr class="hr_line">
-                <span class="trends_2d_header">Оптимизация</span>
-                <form name="trends_2d_optimisation_form" class="trends_2d_optimisation_form">
-                    <select class="select_trends_2d_optimisation_method" name="select_trends_2d_optimisation_method">
-                        <option value="none">Отсутствует</option>
-                        <option value="0">Дихотомия</option>
-                        <option value="1">Золотое сечение</option>
-                        <option value="2">Фибоначчи</option>
-                    </select>
-                    <select class="select_trends_2d_optimisation_type" name="select_trends_2d_optimisation_type">
-                        <option value="0">Минимум</option>
-                        <option value="1">Максимум</option>
-                    </select>
-                    <input type="number" class="number_trends_2d_optimisation_left"
-                        name="number_trends_2d_optimisation_left" id="number_trends_2d_optimisation_left "
-                        placeholder="левая граница">
-                    <input type="number" class="number_trends_2d_optimisation_right"
-                        name="number_trends_2d_optimisation_right" id="number_trends_2d_optimisation_right"
-                        placeholder="правая граница">
-                    <input type="button" class="button_trends_2d_optimisation" name="button_trends_2d_optimisation"
-                        value="Найти">
-                </form>
-                <span class="x_opt trend_results"></span>
-                <span class="y_opt trend_results"></span>
-            </div>
-            <div class="trends_2d_imitation trends_part">
-                <hr class="hr_line">
-                <span class="trends_2d_header">Имитационное моделирование</span>
-                <div class="imitation_div">
-                    <table class="imitation_table">
-                    </table>
-                    <ul class="right_context_menu">
-                        <li class="r_col">Вставить столбец</li>
-                        <li class="r_delete_col">Удалить столбец</li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-        <div class="interpolation_2d">
-            <hr class="hr_line">
-            <span class="trends_2d_header">Интерполяция</span>
-            <form name="interpolation_2d_form" class="interpolation_2d_form">
-                <select class="select_interpolation_2d_method" name="select_interpolation_2d_method">
-                    <option value="none">Отсутствует</option>
-                    <option value="0">Линейная</option>
-                    <option value="1">Кубические сплайны</option>
-                </select>
-                <input type="number" class="number_2d_interpolation_step"
-                    name="number_2d_interpolation_step" id="number_2d_interpolation_step"
-                    value="1">
-                <input type="button" class="button_2d_interpolation" name="button_2d_interpolation"
-                    value="Интерполировать">
-            </form>
-        </div>
-        <div class="trends_3d">
-            <span class="trends_3d_header">Интерполяция</span>
-        </div>
-        <select class="select_culture" name="select_culture">
-            <option value="" disabled selected>Культура</option>
-            <option value="any">Любая</option>
-        </select>
-        <select class="select_field" name="select_field">
-            <option value="" disabled selected>Поле</option>
-            <option value="any">Любое</option>
-        </select>
-        <select class="select_param" name="select_param">
-            <option value="" disabled selected>Параметр</option>
-            <option value="0">Год</option>
-            <option value="3">∑О,мм</option>
-            <option value="4">∑t,°C</option>
-            <option value="7">∑t≥10°C</option>
-            <option value="10">∑t≥15°C</option>
-            <option value="13">∑t≥20°C</option>
-            <option value="15">∑О≥2мм</option>
-            <option value="27">∑В,%</option>
-            <option value="39">∑В≥40%</option>
-            <option value="42">∑В≥45%</option>
-            <option value="45">∑В≥50%</option>
-            <option value="75">ЧД(О)</option>
-            <option value="76">ЧД(t≥10°C)</option>
-            <option value="79">ЧД(t≥15°C)</option>
-            <option value="82">ЧД(t≥20°C)</option>
-            <option value="84">ЧД(О≥2мм)</option>
-            <option value="93">ЧД(В≥40%)</option>
-            <option value="102">ЧД(В≥45%)</option>
-            <option value="111">ЧД(В≥50%)</option>
-            <option value="5">X1</option>
-            <option value="8">X2</option>
-            <option value="11">X3</option>
-            <option value="14">X4</option>
-            <option value="17">X5</option>
-            <option value="20">X6</option>
-            <option value="23">X7</option>
-            <option value="26">X8</option>
-            <option value="29">X9</option>
-            <option value="32">X10</option>
-            <option value="35">X11</option>
-            <option value="38">X12</option>
-            <option value="41">X13</option>
-            <option value="44">X14</option>
-            <option value="47">X15</option>
-            <option value="50">X16</option>
-            <option value="53">X17</option>
-            <option value="56">X18</option>
-            <option value="59">X19</option>
-            <option value="62">X20</option>
-            <option value="65">X21</option>
-            <option value="68">X22</option>
-            <option value="71">X23</option>
-            <option value="74">X24</option>
-            <option value="77">X25</option>
-            <option value="80">X26</option>
-            <option value="83">X27</option>
-            <option value="86">X28</option>
-            <option value="89">X29</option>
-            <option value="92">X30</option>
-            <option value="95">X31</option>
-            <option value="98">X32</option>
-            <option value="101">X33</option>
-            <option value="104">X34</option>
-            <option value="107">X35</option>
-            <option value="110">X36</option>
-            <option value="113">X37</option>
-            <option value="116">X38</option>
-            <option value="119">X39</option>
-        </select>
-    </div>
-    <footer>
-        <div class="tabs">
-            <input type="radio" name="rad" value="1" id="tab_1" checked>
-            <label for="tab_1">Расчет Х</label>
-            <input type="radio" name="rad" value="2" id="tab_2">
-            <label for="tab_2">2D графики</label>
-            <input type="radio" name="rad" value="3" id="tab_3">
-            <label for="tab_3">3D графики</label>
-            <input type="radio" name="rad" value="4" id="tab_4">
-            <label for="tab_4">Диаграммы</label>
-            <span class="span_footer">888</span>
-        </div>
-    </footer>
 </body>
-
-<script src="js/plotly-latest.min.js" defer></script>
-<script src="js/ajax.js" defer></script>
-<script src="js/animation.js" defer></script>
-<script src="js/form_checkers.js" defer></script>
-<script src="js/trends.js" defer></script>
-<script src="js/optimisation.js" defer></script>
-<script src="js/interpolation.js" defer></script>
-<script src="js/chart_engine.js" defer></script>
-<script src="js/calculate.js" defer></script>
-<script src="js/common_table_engine.js" defer></script>-->
 
 </html>
