--- a/home.html
+++ b/home.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Экопрогноз</title>
+    <link rel="stylesheet" href="" id="theme"/>
+    <script src="js/theme.js"></script>
     <link rel="stylesheet" href="css/common_styles.css" />
     <link rel="stylesheet" href="css/home_styles.css" />
 </head>
@@ -57,11 +59,6 @@
                                 <th class="int">ЧД(В≥45%)</th>
                                 <th class="int">ЧД(В≥50%)</th>
                             </tr>
-                            <!--<table class="empty_table">
-                                <tr>
-                                    <th>empty</th>
-                                </tr>
-                            </table>-->
                         </table>
                     </div>
                     <div class="table_body_wrapper">
@@ -107,16 +104,10 @@
                                 <th class="any">Владелец</th>
                                 <th class="any">Координаты</th>
                             </tr>
-                            <!--<table class="empty_table">
-                                <tr>
-                                    <th>empty</th>
-                                </tr>
-                            </table>-->
                         </table>
                     </div>
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
-                        <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
                         <table class="table_body fields main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
@@ -137,17 +128,10 @@
                             <tr>
                                 <th class="any">Культура</th>
                             </tr>
-                            <!--
-                            <table class="empty_table">
-                                <tr>
-                                    <th>empty</th>
-                                </tr>
-                            </table>-->
                         </table>
                     </div>
                     <div class="table_body_wrapper">
                         <div class="cell_selection"></div>
-                        <!--<iframe name="frame" width=100% height=100% style="position:absolute;z-index:-1"></iframe>-->
                         <table class="table_body cultures main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
