--- a/login.html
+++ b/login.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вход - Экопрогноз</title>
+    <title>Вход</title>
+    <link rel="stylesheet" href="" id="theme"/>
+    <script src="js/theme.js"></script>
     <link rel="stylesheet" href="css/common_styles.css" />
     <link rel="stylesheet" href="css/auth_styles.css" />
 </head>
