--- a/settings.html
+++ b/settings.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Настройки - Экопрогноз</title>
+    <title>Настройки</title>
+    <link rel="stylesheet" href="" id="theme"/>
+    <script src="js/theme.js"></script>
     <link rel="stylesheet" href="css/common_styles.css" />
     <link rel="stylesheet" href="css/auth_styles.css" />
 </head>
@@ -47,9 +49,9 @@
                             <span>Тема:</span>
                         </div>
                         <div class="radio_div">
-                            <input type="radio" name="theme_rad" value="1" id="theme_1" checked>
+                            <input type="radio" class="theme_rad" name="theme_rad" class="theme_rad" value="1" id="theme_1" checked>
                             <label for="theme_1">Светлая</label>
-                            <input type="radio" name="theme_rad" value="2" id="theme_2">
+                            <input type="radio" class="theme_rad" name="theme_rad" class="theme_rad" value="2" id="theme_2">
                             <label for="theme_2">Темная</label>
                         </div>
                     </div>
