--- a/calculate.html
+++ b/calculate.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Экопрогноз</title>
-    <link rel="stylesheet" href="" id="theme"/>
+    <link rel="stylesheet" href="" id="theme" />
     <script src="js/theme.js"></script>
     <link rel="stylesheet" href="css/common_styles.css" />
     <link rel="stylesheet" href="css/home_styles.css" />
@@ -280,16 +280,26 @@
                                                 <div class="table_header_wrapper" style="margin: 0;">
                                                     <table class="table_header main_table_header main_table">
                                                         <tr>
-                                                            <th>1</th>
+                                                            <th class="imitation_row_control">
+                                                                <div>
+                                                                    <input type="checkbox" id="close_imitation_chart"
+                                                                        class="close_imitation_chart standart_checkbox"
+                                                                        name="close_imitation_chart">
+                                                                    <label for="close_imitation_chart"
+                                                                        class="close_imitation_chart"></label>
+                                                                    <span
+                                                                        class="delete_imitation_chart span_button">&#215;</span>
+                                                                </div>
+                                                            </th>
+                                                            <th></th>
+                                                            <th>y</th>
                                                         </tr>
                                                     </table>
                                                 </div>
                                                 <div class="table_body_wrapper" style="margin: 0;">
                                                     <div class="cell_selection"></div>
-                                                    <table class="table_body main_table_body main_table" tabindex="0">
-                                                        <tr>
-                                                            <td></td>
-                                                        </tr>
+                                                    <table class="table_body main_table imitation_table_body">
+                                                        
                                                     </table>
                                                 </div>
                                             </div>
@@ -378,6 +388,15 @@
             </ul>
         </footer>
         <div class="popup"><span class="popup_text"></span><span class="close_cross span_button">&times;</span></div>
+        <table class="table_body main_table imitation_table_body_template template">
+            <tr class="first">
+                <th rowspan="2" class="imitation_row_control"></th>
+                <th class="name_y">11</th>
+            </tr>
+            <tr class="second">
+                <th class="name_yhat">21</th>
+            </tr>
+        </table>
         <div class="chart_rectangle_template template">
             <span class="chart_rectangle_name"></span>
             <span class="delete_chart span_button">&#215;</span>
