--- a/calculate.html
+++ b/calculate.html
@@ -280,27 +280,14 @@
                                                 <div class="table_header_wrapper" style="margin: 0;">
                                                     <table class="table_header main_table_header main_table">
                                                         <tr>
-                                                            <th class="imitation_row_control">
-                                                                <div>
-                                                                    <input type="checkbox" id="close_imitation_chart"
-                                                                        class="close_imitation_chart standart_checkbox"
-                                                                        name="close_imitation_chart">
-                                                                    <label for="close_imitation_chart"
-                                                                        class="close_imitation_chart"></label>
-                                                                    <span
-                                                                        class="delete_imitation_chart span_button">&#215;</span>
-                                                                </div>
-                                                            </th>
-                                                            <th></th>
-                                                            <th>y</th>
+                                                            <th class="imitation_row_control not_res"></th>
+                                                            <th class="not_res"></th>
                                                         </tr>
                                                     </table>
                                                 </div>
                                                 <div class="table_body_wrapper" style="margin: 0;">
                                                     <div class="cell_selection"></div>
-                                                    <table class="table_body main_table imitation_table_body">
-                                                        
-                                                    </table>
+                                                    <table class="table_body main_table imitation_table_body"></table>
                                                 </div>
                                             </div>
                                         </div>
@@ -388,13 +375,24 @@
             </ul>
         </footer>
         <div class="popup"><span class="popup_text"></span><span class="close_cross span_button">&times;</span></div>
+        
+        <div class="imitation_row_control imitation_row_control_template template">
+            <div>
+                <input type="checkbox" id="close_imitation_chart"
+                    class="close_imitation_chart standart_checkbox">
+                <label for="close_imitation_chart"
+                    class="close_imitation_chart"></label>
+                <span
+                    class="delete_imitation_chart span_button">&#215;</span>
+            </div>
+        </div>
         <table class="table_body main_table imitation_table_body_template template">
             <tr class="first">
                 <th rowspan="2" class="imitation_row_control"></th>
-                <th class="name_y">11</th>
+                <th class="name_y name">11</th>
             </tr>
             <tr class="second">
-                <th class="name_yhat">21</th>
+                <th class="name_yhat name">21</th>
             </tr>
         </table>
         <div class="chart_rectangle_template template">
