--- a/home.html
+++ b/home.html
@@ -66,8 +66,8 @@
                         <table class="table_body main_table" tabindex="0">
                             <tr>
                                 <td contenteditable></td>
-                                <td></td>
-                                <td></td>
+                                <td class="context_input"></td>
+                                <td class="context_input"></td>
                                 <td contenteditable></td>
                                 <td contenteditable></td>
                                 <td contenteditable></td>
