--- a/calculate.html
+++ b/calculate.html
@@ -264,6 +264,12 @@
                                                 name="auto_arima_checkbox">
                                             <label for="auto_arima_checkbox"
                                                 class="auto_arima_checkbox_label">Автоподбор</label>
+
+                                            <input type="checkbox" id="imitation_checkbox"
+                                                class="imitation_checkbox standart_checkbox"
+                                                name="imitation_checkbox">
+                                            <label for="imitation_checkbox"
+                                                class="imitation_checkbox_label">Имитация</label>
                                             <input type="submit" class="forecast_2d_button" name="forecast_2d_button"
                                                 value="Прогноз">
                                         </form>
