--- a/calculate.html
+++ b/calculate.html
@@ -280,7 +280,7 @@
                                     </div>
                                     <div class="imitation_div">
                                         <div class="table_wrapper">
-                                            <div class="table">
+                                            <div class="table imitation_table">
                                                 <div class="table_header_wrapper" style="margin: 0;">
                                                     <table class="table_header main_table_header main_table"></table>
                                                 </div>
@@ -387,7 +387,7 @@
         <table class="imitation_header_template template">
             <tr>
                 <th class="imitation_row_control not_res">...</th>
-                <th class="not_res"></th>
+                <th class="name not_res"></th>
             </tr>
         </table>
         <div class="imitation_row_control imitation_row_control_template template">
