columns order changed

--- a/home.html
+++ b/home.html
@@ -40,21 +40,21 @@
                                 <th class="int">Год</th>
                                 <th class="field">Поле</th>
                                 <th class="culture">Культура</th>
+                                <th class="double">∑t,°C</th>
+                                <th class="double">∑t≥10°C</th>
+                                <th class="double">∑t≥15°C</th>
+                                <th class="double">∑t≥20°C</th>
+                                <th class="int">ЧД(t≥10°C)</th>
+                                <th class="int">ЧД(t≥15°C)</th>
+                                <th class="int">ЧД(t≥20°C)</th>
                                 <th class="double">∑О,мм</th>
-                                <th class="int">∑t,°C</th>
-                                <th class="int">∑t≥10°C</th>
-                                <th class="int">∑t≥15°C</th>
-                                <th class="int">∑t≥20°C</th>
                                 <th class="double">∑О≥2мм</th>
+                                <th class="int">ЧД(О)</th>
+                                <th class="int">ЧД(О≥2мм)</th>
                                 <th class="int">∑В,%</th>
                                 <th class="int">∑В≥40%</th>
                                 <th class="int">∑В≥45%</th>
                                 <th class="int">∑В≥50%</th>
-                                <th class="int">ЧД(О)</th>
-                                <th class="int">ЧД(t≥10°C)</th>
-                                <th class="int">ЧД(t≥15°C)</th>
-                                <th class="int">ЧД(t≥20°C)</th>
-                                <th class="int">ЧД(О≥2мм)</th>
                                 <th class="int">ЧД(В≥40%)</th>
                                 <th class="int">ЧД(В≥45%)</th>
                                 <th class="int">ЧД(В≥50%)</th>
