--- a/calculate.html
+++ b/calculate.html
@@ -503,6 +503,7 @@
     <script src="css-element-queries-1.2.1/src/ResizeSensor.js"></script>
     <script src="js/plotly-latest.js" defer></script>
     <script src="js/crypto-js.min.js" defer></script>
+    <script src="js/jquery-3.6.0.min.js" defer></script>
     <script src="js/common.js" defer></script>
     <script src="js/trends.js" defer></script>
     <script src="js/chart_engine.js" defer></script>
