--- a/calculate.html
+++ b/calculate.html
@@ -264,7 +264,6 @@
                                                 name="auto_arima_checkbox">
                                             <label for="auto_arima_checkbox"
                                                 class="auto_arima_checkbox_label">Автоподбор</label>
-
                                             <input type="checkbox" id="imitation_checkbox"
                                                 class="imitation_checkbox standart_checkbox"
                                                 name="imitation_checkbox">
@@ -290,6 +289,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="im_plotly_div"></div>
                                     </div>
                                 </div>
 
