--- a/calculate.html
+++ b/calculate.html
@@ -336,7 +336,7 @@
                                         <span class="header">Интерполяция</span>
                                     </div>
                                     <div class="form_div">
-                                        <form name="interpolation_2d_form" class="interpolation_2d_form">
+                                        <form name="interpolation_2d_form" class="interpolation_2d_form" onsubmit="event.preventDefault();">
                                             <select class="select_2d_interpolation_type" name="select_2d_interpolation_type">
                                                 <option value="none">Отсутствует</option>
                                                 <option value="0">Линейная</option>
@@ -344,8 +344,10 @@
                                             </select>
                                             <label for="number_2d_interpolation_step">шаг:</label>
                                             <input type="number" class="number_2d_interpolation_step"
-                                                name="number_2d_interpolation_step" id="number_2d_interpolation_step" min="0.05" max="99"
-                                                step="0.1" value="1" disabled>
+                                                name="number_2d_interpolation_step" id="number_2d_interpolation_step" min="0.1" max="1"
+                                                step="0.1" value="0.5" disabled>
+                                            <input type="submit" class="interpolation_2d_button" name="interpolation_2d_button"
+                                                value="Интерполировать">
                                         </form>
                                     </div>
                                 </div>
